--- a/style_index.css
+++ b/style_index.css
@@ -18,7 +18,6 @@
 .navbartitle {
     text-align: center;
     margin: 0%;
-    font-family: 'Lucida Sans';
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,19 +26,55 @@
 .buttongrid {
     margin-top: 55px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr max-content;
     grid-gap: 10px;
 }
 
 .buttongrid button {
-    border: 4px solid #ccc;
-    padding: 40px;
-    padding-top: 155px;
-    padding-bottom: 155px;
+    border: 4px solid rgb(255, 216, 222);
+    background-color: white;
     margin-right: -70px;
     font-size: 30px;
     display: flex;
     text-align: center;
     justify-content: center;
     cursor: pointer;
+}
+
+.maptxt {
+    margin-top: 10px;
+}
+
+.resourcestxt {
+    margin-bottom: 10px;
+}
+
+.button1 {
+    padding: 37px;
+    padding-top: 155px;
+    padding-bottom: 155px;
+}
+.button1:hover {
+    background-color: rgb(228, 228, 228);
+}
+
+.button2 {
+    padding: 40px;
+    padding-right: 50px;
+    padding-top: 155px;
+    padding-bottom: 155px;
+}
+
+.button2:hover {
+    background-color: lightgrey;
+}
+
+.map {
+    padding: 102px;
+    padding-left: 54px;
+    padding-right: 54px;
+}
+
+.map:hover {
+    background-color: lightgrey;
 }
